# finn

./: .gitignore  .gitmodules  CMakeLists.txt  README  azure-pipelines.yml  init_project_and_script_files.sh
script/: ubr-unix-build-and-run.sh  uobe-unix-build-only-executable.sh  ur-unix-run.sh  ut-unix-test.sh  wos-win-open-sln.ps1
src/: CMakeLists.txt  finnhub_rest_client.cpp  finnhub_rest_client.h  logger.cpp  logger.h  main.cpp  secrets.h  utility.h
